Styled new icons and got instructor photo upload working

--- a/app/assets/stylesheets/overrides.scss
+++ b/app/assets/stylesheets/overrides.scss
@@ -88,3 +88,11 @@ input {
     margin: 10px auto;
     display: block;
 }
+
+.vertical-align-middle { 
+    vertical-align: middle; 
+}
+
+.padding-bottom-3 {
+    padding-bottom: 3px;
+}
