--- a/app/views/partials/_object_options.html.erb
+++ b/app/views/partials/_object_options.html.erb
@@ -20,6 +20,14 @@
       &nbsp;&nbsp;
   <% end %>
   
+  
+  <% if current_user.role == "instructor" && (model_name == "instructor") %>
+      <%= link_to(eval("edit_#{model_name}_photo_path(object)"), class: 'waves-effect waves-light btn') do %>
+          &nbsp;<%= "Edit Photo" %>
+      <% end %>
+      &nbsp;&nbsp;
+  <% end %>
+  
 
   <% if can? :destroy, model_name.capitalize %>
     <%= link_to(eval("#{model_name}_path(object)"), method: 'delete', data: {confirm: "Are you sure you want to permanently delete #{opt}"}, class: 'waves-effect waves-light btn btn-alert') do %>
