--- a/app/views/camps/_active_camps.html.erb
+++ b/app/views/camps/_active_camps.html.erb
@@ -41,7 +41,8 @@
     <% end %>
 <% end %>
 
+<div class="row"></div>
+
 <h5 class="paginate">
   <%= will_paginate @active_camps, :previous_label => "Previous&nbsp;", :next_label => "&nbsp;Next", :param_name => 'active_camps' %>
 </h5>
-
