--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -12,12 +12,12 @@
 		<table cellpadding="3">
 			<tr>
 				<td>Webmaster:&nbsp;&nbsp;&nbsp;</td>
-				<td>Professor Larry Heimann</td>
+				<td>Professor Dean Dijour</td>
 			</tr>
 			<tr>
 				<td>Email:</td>
 				<td>
-				<%= mail_to("profh@cmu.edu", "Klingon Code Warrior*", :encode => "javascript") %> 
+				<%= mail_to("dijour@cmu.edu", "Donut Eating Champion*", :encode => "javascript") %> 
 				</td>
 			</tr>
 			<tr>
@@ -26,8 +26,8 @@
 			</tr>
 		</table>
 
-		<p class="note"><br>*I am a professor of information systems at Carnegie Mellon University and this nickname was a little joke between myself and my students that I adopted as my signature for all my programming work.  
-			<br><br><em>... in truth I am only half-Klingon.</em></p>
+		<p class="note"><br>*I am a student of information systems at Carnegie Mellon University and this nickname was a little joke between myself and myself that I adopted as my signature for all my programming work.  
+			<br><br><em>... in truth I am only half-donut.</em></p>
 			
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
