Jk done now, fixed a bug where registering a new user doesn't automatically generate a cart for them

--- a/app/views/instructors/index.html.erb
+++ b/app/views/instructors/index.html.erb
@@ -29,9 +29,9 @@
   </tbody>
 </table>
 
-<span class="paginate">
+<h5 class="paginate">
   <%= will_paginate @instructors, :previous_label => "Previous&nbsp;", :next_label => "&nbsp;Next", :param_name => 'instructors' %>
-</span>
+</h5>
 
     <% end %>
 
