--- a/app/views/partials/_nav_admin.html.erb
+++ b/app/views/partials/_nav_admin.html.erb
@@ -10,6 +10,7 @@
           <li><%= link_to "Students", students_path %></li> 
           <li><%= link_to "Instructors", instructors_path %></li>
           <li><%= link_to "Locations", locations_path %></li>
+          <li><%= link_to "Users", users_path %></li>
           <ul class="right">
             <li><%= link_to 'Logout', logout_path %></li>
           </ul>
@@ -21,6 +22,7 @@
           <li><%= link_to "Students", students_path %></li>
           <li><%= link_to "Instructors", instructors_path %></li>
           <li><%= link_to "Locations", locations_path %></li>
+          <li><%= link_to "Users", users_path %></li>
           <li><%= link_to 'Logout', logout_path %></li>
         </ul>
         </div>
