--- a/app/views/partials/_nav_guest.html.erb
+++ b/app/views/partials/_nav_guest.html.erb
@@ -6,12 +6,12 @@
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><%= link_to "Curriculums", curriculums_path %></li>
           <li><%= link_to "Camps", camps_path %></li> 
-          <li><%= link_to 'Login', login_path %></li>
+          <li><%= link_to 'Login/Signup', login_path %></li>
         </ul>
         <ul class="side-nav" id="mobile-demo">
           <li><%= link_to "Curriculums", curriculums_path %></li>
           <li><%= link_to "Camps", camps_path %></li> 
-          <li><%= link_to 'Login', login_path %></li>
+          <li><%= link_to 'Login/Signup', login_path %></li>
         </ul>
         </div>
     </div>
